# v2-bracketeer

./: .gitignore  CHANGELOG.md  README.md  package.json  vite.config.js
.github/workflows/: desktop-build.yml
scripts/: build-desktop.sh  build-desktop.ts  bump-version.ts
src/: server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: flat_dark.icns  flat_light.icns  gradient_dark.icns  monochrome.icns
src-tauri/src/: main.rs
src/lib/: bracket-logic.ts  bracket-types.ts  db.ts  engine.ts  pdf-import.ts
src/public/: app.js  index.html  styles.css
src/public/assets/: index-B7l3y1Rg.css  index-BAOkE4rm.js  index-CXO-94z_.css  index-DRqTEHZT.js  index-DsL_vQTR.css  index-H5ONqoBD.css  index-TIbYssmX.js  index-fjPeketF.js  index-qW2tGe8H.js  pdf-f5gHuhlm.js
src/ui/: App.jsx  index.html  styles.css
src/ui/components/: VisualBracket.jsx
src/ui/components/bowlers/: BowlerRow.jsx  EditableCellButton.jsx
src/ui/components/layout/: DashboardTopbar.jsx  MetricStrip.jsx  SidebarNav.jsx
src/ui/components/modals/: AddBowlerModal.jsx  ConfirmDeleteModal.jsx  EntrantsModal.jsx  (+3 more)
src/ui/hooks/: useAppEffects.js  useBowlerActions.js  useBracketActions.js  useDashboardViewModel.js  usePaymentActions.js  useScoreActions.js  useSessionDataActions.js  useSessionLifecycleActions.js  useThemePreference.js
src/ui/lib/: api-client.js  bracket-format.js  format.js  print-utils.js
src/ui/pages/: BowlersPage.jsx  BracketsPage.jsx  MaintenancePage.jsx  PayoutsPage.jsx  ScoresPage.jsx  SessionPage.jsx  SettingsPage.jsx
